11.3 Fix add review on order empty bots and change size windows check review  (Исправили возможность добавления отзыва без бота и размеры для экрана проверки отзывов)